<resources>
    <string name="app_name">Made In India Furniture</string>
    <string name="fb_app_id" transferable="false">2357023251206841</string>
    <string name="fb_login_protocol_scheme" transferable="false">fb2357023251206841</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="order_history">Order History</string>
    <string name="cart_list">Cart List</string>
    <string name="wishlist">Wishlist</string>
    <string name="notification">Notification</string>
    <string name="help">Help</string>
    <string name="account">Account</string>
</resources>
